Bug 1725488: Rewrite simulcast mochitests, and remove the hooks they used. r=ng,emilio
Differential Revision: https://phabricator.services.mozilla.com/D122626

UltraBlame original commit: 98c9570ca2fba5761f90fb300d2c35fbde70ced9

--- a/dom/media/webrtc/tests/mochitests/test_peerConnection_simulcastOddResolution.html
+++ b/dom/media/webrtc/tests/mochitests/test_peerConnection_simulcastOddResolution.html
@@ -61,6 +61,50 @@ js
 script
 >
 <
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+helpers_from_wpt
+/
+sdp
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+simulcast
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -107,424 +151,83 @@ true
 }
 )
 ;
-const
-encodings
-=
-[
-{
-rid
-:
-"
-foo
-"
-maxBitrate
-:
-40000
-scaleResolutionDownBy
-:
-1
-.
-9
-}
-{
-rid
-:
-"
-bar
-"
-maxBitrate
-:
-40000
-scaleResolutionDownBy
-:
-3
-.
-5
-}
-{
-rid
-:
-"
-baz
-"
-maxBitrate
-:
-40000
-scaleResolutionDownBy
-:
-17
-.
-8
-}
-]
-;
-function
-addRIDExtension
+runNetworkTest
 (
-pc
-extensionId
-)
-{
-const
-receivers
-=
-pc
-.
-_pc
-.
-getReceivers
+async
 (
 )
-;
-is
+=
+>
+{
+const
+helper
+=
+new
+VideoStreamHelper
 (
-receivers
-.
-length
-1
-"
-We
-have
-exactly
-one
-RTP
-receiver
-"
 )
 ;
 const
-receiver
+emitter
 =
-receivers
-[
-0
-]
-;
-SpecialPowers
-.
-wrap
+new
+VideoFrameEmitter
 (
-receiver
-)
+helper
 .
-mozAddRIDExtension
-(
-extensionId
+green
+helper
+.
+red
+705
+528
 )
 ;
-}
-function
-selectRecvRID
-(
-pc
-rid
-)
-{
-const
-receivers
-=
-pc
-.
-_pc
-.
-getReceivers
-(
-)
-;
-is
-(
-receivers
-.
-length
-1
-"
-We
-have
-exactly
-one
-RTP
-receiver
-"
-)
-;
-const
-receiver
-=
-receivers
-[
-0
-]
-;
-SpecialPowers
-.
-wrap
-(
-receiver
-)
-.
-mozAddRIDFilter
-(
-rid
-)
-;
-}
 async
 function
-changeSourceResolution
+checkVideoElement
 (
-test
-emitter
-width
-height
+senderElement
+receiverElement
+encoding
 )
 {
 info
 (
-Changing
-source
-resolution
+Waiting
+for
+receiver
+video
+element
+{
+encoding
+.
+rid
+}
 to
-{
-width
-}
-x
-{
-height
-}
-)
-;
-emitter
-.
-size
-(
-width
-height
-)
-;
-emitter
-.
 start
-(
+playing
 )
 ;
 await
-Promise
+helper
 .
-all
+checkVideoPlaying
 (
-[
-haveEvent
-(
-test
-.
-pcRemote
-.
-localMediaElements
-[
-0
-]
-"
-resize
-"
-)
-haveEvent
-(
-test
-.
-pcLocal
-.
-remoteMediaElements
-[
-0
-]
-"
-resize
-"
-)
-]
-)
-;
-emitter
-.
-stop
-(
-)
-;
-info
-(
-"
-Source
-resolution
-changed
-"
-)
-;
-}
-async
-function
-setParameters
-(
-test
-emitter
-encodings
-)
-{
-info
-(
-Setting
-parameters
-to
-{
-JSON
-.
-stringify
-(
-encodings
-)
-}
-)
-;
-emitter
-.
-start
-(
-)
-;
-await
-test
-.
-pcRemote
-.
-_pc
-.
-getSenders
-(
-)
-[
-0
-]
-.
-setParameters
-(
-{
-encodings
-}
-)
-;
-await
-haveEvent
-(
-test
-.
-pcLocal
-.
-remoteMediaElements
-[
-0
-]
-"
-resize
-"
-)
-;
-emitter
-.
-stop
-(
-)
-;
-info
-(
-"
-Parameters
-set
-"
-)
-;
-}
-async
-function
-checkResolution
-(
-test
-emitter
-rid
-)
-{
-const
-vlocal
-=
-test
-.
-pcRemote
-.
-localMediaElements
-[
-0
-]
-;
-const
-vremote
-=
-test
-.
-pcLocal
-.
-remoteMediaElements
-[
-0
-]
-;
-info
-(
-Changing
-to
-rid
-{
-rid
-}
-)
-;
-selectRecvRID
-(
-test
-.
-pcLocal
-rid
-)
-;
-emitter
-.
-start
-(
-)
-;
-await
-haveEvent
-(
-vremote
-"
-resize
-"
-)
-;
-emitter
-.
-stop
-(
+receiverElement
 )
 ;
 const
 srcWidth
 =
-vlocal
+senderElement
 .
 videoWidth
 ;
 const
 srcHeight
 =
-vlocal
+senderElement
 .
 videoHeight
 ;
@@ -545,24 +248,7 @@ srcHeight
 const
 scaleDownBy
 =
-encodings
-.
-find
-(
-(
-{
-rid
-:
-r
-}
-)
-=
->
-r
-=
-=
-rid
-)
+encoding
 .
 scaleResolutionDownBy
 ;
@@ -592,16 +278,23 @@ srcWidth
 const
 width
 =
-vremote
+receiverElement
 .
 videoWidth
 ;
 const
 height
 =
-vremote
+receiverElement
 .
 videoHeight
+;
+const
+rid
+=
+encoding
+.
+rid
 ;
 ok
 (
@@ -682,123 +375,171 @@ rid
 }
 async
 function
-checkResolutions
+checkVideoElements
 (
-test
-emitter
+senderElement
+receiverElements
+encodings
 )
 {
-const
-vremote
-=
-test
+is
+(
+receiverElements
 .
-pcLocal
+length
+encodings
 .
-remoteMediaElements
-[
-0
-]
-;
-/
-/
-Start
-by
-making
-sure
-we
+length
 '
-re
-not
-on
-foo
-(
-first
-default
-)
-or
-/
-/
-baz
-(
-subsequent
-default
-)
-thus
-getting
-resize
-events
-.
-selectRecvRID
-(
-test
-.
-pcLocal
-"
-bar
-"
+Number
+of
+video
+elements
+should
+match
+number
+of
+encodings
+'
 )
 ;
-emitter
-.
+info
+(
+'
+Waiting
+for
+sender
+video
+element
+to
 start
-(
+playing
+'
 )
 ;
 await
-haveEvent
-(
-vremote
-"
-resize
-"
-)
-;
-emitter
+helper
 .
-stop
+checkVideoPlaying
 (
+senderElement
 )
 ;
-await
-checkResolution
+for
 (
-test
-emitter
-"
-foo
-"
-)
+let
+i
+=
+0
 ;
-await
-checkResolution
-(
-test
-emitter
-"
-bar
-"
-)
+i
+<
+encodings
+.
+length
 ;
+i
++
++
+)
+{
 await
-checkResolution
+checkVideoElement
 (
-test
-emitter
-"
-baz
-"
+senderElement
+receiverElements
+[
+i
+]
+encodings
+[
+i
+]
 )
 ;
 }
-runNetworkTest
-(
+}
 async
+function
+waitForResizeEvents
 (
+elements
 )
+{
+return
+Promise
+.
+all
+(
+elements
+.
+map
+(
+elem
 =
 >
+haveEvent
+(
+elem
+'
+resize
+'
+)
+)
+)
+;
+}
+const
+encodings
+=
+[
 {
+rid
+:
+"
+0
+"
+maxBitrate
+:
+40000
+scaleResolutionDownBy
+:
+1
+.
+9
+}
+{
+rid
+:
+"
+1
+"
+maxBitrate
+:
+40000
+scaleResolutionDownBy
+:
+3
+.
+5
+}
+{
+rid
+:
+"
+2
+"
+maxBitrate
+:
+40000
+scaleResolutionDownBy
+:
+17
+.
+8
+}
+]
+;
 await
 pushPrefs
 (
@@ -812,24 +553,38 @@ simulcast
 '
 true
 ]
-[
-'
-media
-.
-peerconnection
-.
-video
-.
-lock_scaling
-'
-true
-]
 /
 /
-240Kbps
+180Kbps
 was
 determined
 empirically
+set
+well
+-
+higher
+than
+/
+/
+the
+80Kbps
++
+overhead
+needed
+for
+the
+two
+simulcast
+streams
+.
+/
+/
+100Kbps
+was
+apparently
+too
+low
+.
 [
 '
 media
@@ -840,193 +595,200 @@ video
 .
 min_bitrate_estimate
 '
-240
+180
 *
 1000
 ]
 )
 ;
-let
-emitter
-helper
-;
-test
+const
+offerer
 =
 new
-PeerConnectionTest
+RTCPeerConnection
 (
-{
-bundle
-:
-false
-}
 )
 ;
-test
-.
-setMediaConstraints
+const
+answerer
+=
+new
+RTCPeerConnection
 (
+)
+;
+const
+add
+=
+(
+pc
+can
+failed
+)
+=
+>
+can
+&
+&
+pc
+.
+addIceCandidate
+(
+can
+)
+.
+catch
+(
+failed
+)
+;
+offerer
+.
+onicecandidate
+=
+e
+=
+>
+add
+(
+answerer
+e
+.
+candidate
+generateErrorCallback
+(
+)
+)
+;
+answerer
+.
+onicecandidate
+=
+e
+=
+>
+add
+(
+offerer
+e
+.
+candidate
+generateErrorCallback
+(
+)
+)
+;
+const
+metadataToBeLoaded
+=
 [
-{
-video
-:
-true
-}
 ]
-[
+;
+answerer
+.
+ontrack
+=
+(
+e
+)
+=
+>
 {
-video
-:
-true
+metadataToBeLoaded
+.
+push
+(
+getPlaybackWithLoadedMetadata
+(
+e
+.
+track
+)
+)
+;
 }
-]
-)
 ;
-test
-.
-chain
-.
-replace
-(
-"
-PC_REMOTE_GUM
-"
-[
-function
-PC_REMOTE_CANVAS_CAPTURESTREAM
-(
-test
-)
-{
-helper
+/
+/
+One
+send
+transceiver
+that
+will
+be
+used
+to
+send
+both
+simulcast
+streams
+const
+videoStream
 =
-new
-VideoStreamHelper
-(
-)
-;
-emitter
-=
-new
-VideoFrameEmitter
-(
-helper
-.
-green
-helper
-.
-red
-705
-528
-)
-;
-test
-.
-pcRemote
-.
-attachLocalStream
-(
 emitter
 .
 stream
 (
 )
-)
 ;
-/
-/
-Don
-'
-t
-start
-the
-emitter
-yet
+offerer
 .
-Only
-do
-that
-when
-we
-'
-re
-able
-to
-set
-rid
-filters
-.
-}
-]
-)
-;
-test
-.
-chain
-.
-insertAfter
+addTrack
 (
-'
-PC_REMOTE_GET_OFFER
-'
+videoStream
+.
+getVideoTracks
+(
+)
 [
-function
-PC_REMOTE_SET_RIDS
-(
-test
+0
+]
+videoStream
 )
-{
+;
 const
-senders
+senderElement
 =
-test
+document
 .
-pcRemote
+createElement
+(
+'
+video
+'
+)
+;
+senderElement
 .
-_pc
+autoplay
+=
+true
+;
+senderElement
+.
+srcObject
+=
+videoStream
+;
+senderElement
+.
+id
+=
+videoStream
+.
+id
+const
+sender
+=
+offerer
 .
 getSenders
 (
 )
-;
-is
-(
-senders
-.
-length
-1
-"
-We
-have
-exactly
-one
-RTP
-sender
-"
-)
-;
-const
-sender
-=
-senders
 [
 0
 ]
 ;
-ok
-(
-sender
-.
-track
-"
-Sender
-has
-a
-track
-"
-)
-;
-return
 sender
 .
 setParameters
@@ -1036,429 +798,253 @@ encodings
 }
 )
 ;
-}
-async
-function
-PC_LOCAL_ADD_RIDS_TO_OFFER
-(
-test
-)
-{
-/
-/
-Create
-a
-dummy
-offer
-and
-use
-it
-to
-set
-simulcast
-stuff
-on
-the
-/
-/
-offer
-we
-will
-actually
-be
-using
-.
-let
+const
 offer
 =
 await
-test
+offerer
 .
 createOffer
 (
-test
-.
-pcRemote
 )
 ;
-test
-.
-_local_offer
-.
-sdp
+const
+mungedOffer
 =
-sdputils
-.
-transferSimulcastProperties
+ridToMid
 (
 offer
-.
-sdp
-test
-.
-_local_offer
 .
 sdp
 )
 ;
 info
 (
-Offer
-with
-RIDs
+Transformed
+send
+simulcast
+offer
+to
+multiple
+m
+-
+sections
+:
+{
+offer
+.
+sdp
+}
+to
+{
+mungedOffer
+}
+)
+;
+await
+answerer
+.
+setRemoteDescription
+(
+{
+type
+:
+'
+offer
+'
+sdp
+:
+mungedOffer
+}
+)
+;
+await
+offerer
+.
+setLocalDescription
+(
+offer
+)
+;
+const
+rids
+=
+answerer
+.
+getTransceivers
+(
+)
+.
+map
+(
+t
+=
+>
+t
+.
+mid
+)
+;
+is
+(
+rids
+.
+length
+3
+'
+Should
+have
+3
+mids
+in
+offer
+'
+)
+;
+ok
+(
+rids
+[
+0
+]
+'
+First
+mid
+should
+be
+non
+-
+empty
+'
+)
+;
+ok
+(
+rids
+[
+1
+]
+'
+Second
+mid
+should
+be
+non
+-
+empty
+'
+)
+;
+ok
+(
+rids
+[
+2
+]
+'
+Third
+mid
+should
+be
+non
+-
+empty
+'
+)
+;
+info
+(
+rids
 :
 {
 JSON
 .
 stringify
 (
-test
-.
-_local_offer
+rids
 )
-}
-)
-;
-ok
-(
-test
-.
-_local_offer
-.
-sdp
-.
-match
-(
-/
-a
-=
-simulcast
-:
-/
-)
-"
-Modified
-offer
-has
-simulcast
-"
-)
-;
-ok
-(
-test
-.
-_local_offer
-.
-sdp
-.
-match
-(
-/
-a
-=
-rid
-:
-foo
-/
-)
-"
-Modified
-offer
-has
-rid
-foo
-"
-)
-;
-ok
-(
-test
-.
-_local_offer
-.
-sdp
-.
-match
-(
-/
-a
-=
-rid
-:
-bar
-/
-)
-"
-Modified
-offer
-has
-rid
-bar
-"
-)
-;
-ok
-(
-test
-.
-_local_offer
-.
-sdp
-.
-match
-(
-/
-a
-=
-rid
-:
-baz
-/
-)
-"
-Modified
-offer
-has
-rid
-bar
-"
-)
-;
-ok
-(
-test
-.
-_local_offer
-.
-sdp
-.
-match
-(
-/
-urn
-:
-ietf
-:
-params
-:
-rtp
--
-hdrext
-:
-sdes
-:
-rtp
--
-stream
--
-id
-/
-)
-"
-Modified
-offer
-has
-RID
-"
-)
-;
-}
-]
-)
-;
-test
-.
-chain
-.
-insertAfter
-(
-'
-PC_LOCAL_GET_ANSWER
-'
-[
-function
-PC_LOCAL_REMOVE_SIMULCAST_ATTRS_FROM_ANSWER
-(
-test
-)
-{
-test
-.
-_remote_answer
-.
-sdp
-=
-sdputils
-.
-removeSimulcastProperties
-(
-test
-.
-_remote_answer
-.
-sdp
-)
-;
-}
-]
-)
-;
-/
-/
-do
-this
-after
-set
-remote
-description
-so
-the
-MediaPipeline
-/
-/
-has
-been
-created
-.
-test
-.
-chain
-.
-insertAfter
-(
-'
-PC_LOCAL_SET_REMOTE_DESCRIPTION
-'
-[
-function
-PC_LOCAL_SET_RTP_FIRST_RID
-(
-test
-)
-{
-info
-(
-local
-offer
-:
-{
-test
-.
-_local_offer
-.
-sdp
 }
 )
 ;
 const
-extmap_id
+answer
 =
-test
+await
+answerer
 .
-_local_offer
-.
-sdp
-.
-match
+createAnswer
 (
-"
-a
-=
-extmap
-:
-(
-[
-0
--
-9
-+
-]
-)
-/
-recvonly
-urn
-:
-ietf
-:
-params
-:
-rtp
--
-hdrext
-:
-sdes
-:
-rtp
--
-stream
--
-id
-"
 )
 ;
-ok
+const
+mungedAnswer
+=
+midToRid
 (
-extmap_id
-Original
 answer
-has
-extmap
-id
-for
+.
+sdp
+)
+;
+info
+(
+Transformed
+recv
+answer
+to
 simulcast
 :
 {
-extmap_id
-[
-1
-]
+answer
+.
+sdp
+}
+to
+{
+mungedAnswer
 }
 )
 ;
-/
-/
-Cause
-pcLocal
-to
-filter
-out
-everything
-but
-RID
-"
-foo
-"
-only
-/
-/
-allowing
-one
-of
-the
-simulcast
-streams
-through
+await
+offerer
 .
-addRIDExtension
+setRemoteDescription
 (
-test
-.
-pcLocal
-extmap_id
-[
-1
-]
+{
+type
+:
+'
+answer
+'
+sdp
+:
+mungedAnswer
+}
 )
 ;
-selectRecvRID
-(
-test
+await
+answerer
 .
-pcLocal
-"
-foo
-"
+setLocalDescription
+(
+answer
+)
+;
+is
+(
+metadataToBeLoaded
+.
+length
+3
+'
+Offerer
+should
+have
+gotten
+3
+ontrack
+events
+'
 )
 ;
 emitter
@@ -1467,402 +1053,311 @@ start
 (
 )
 ;
-}
-function
-SETUP_RESIZE_LISTENERS
-(
-test
-)
-{
-for
-(
-const
-elem
-of
-[
-.
-.
-.
-test
-.
-pcRemote
-.
-localMediaElements
-.
-.
-.
-test
-.
-pcLocal
-.
-remoteMediaElements
-]
-)
-{
-elem
-.
-addEventListener
-(
-"
-resize
-"
-(
-)
-=
->
 info
 (
-element
-{
-elem
+'
+Waiting
+for
+3
+loadedmetadata
+events
+'
+)
+;
+const
+videoElems
+=
+await
+Promise
 .
-id
-}
-resized
+all
+(
+metadataToBeLoaded
+)
+;
+await
+checkVideoElements
+(
+senderElement
+videoElems
+encodings
+)
+;
+emitter
+.
+stop
+(
+)
+;
+info
+(
+Changing
+source
+resolution
 to
-{
-elem
-.
-videoWidth
-}
-x
-{
-elem
-.
-videoHeight
-}
-)
+1280x720
 )
 ;
-}
-}
-]
-)
-;
-test
-.
-chain
-.
-append
-(
-[
-async
-function
-PC_LOCAL_CHECK_INITIAL_SIZES
-(
-)
-{
-await
-checkResolutions
-(
-test
 emitter
-)
-;
-}
-async
-function
-PC_LOCAL_CHANGE_SRC_1
+.
+size
 (
-)
-{
-await
-changeSourceResolution
-(
-test
-emitter
 1280
 720
 )
 ;
-await
-checkResolutions
-(
-test
 emitter
+.
+start
+(
 )
 ;
-}
-async
-function
-PC_LOCAL_CHANGE_PARAMS_2
+await
+waitForResizeEvents
 (
-)
-{
-encodings
+[
+senderElement
 .
-find
-(
-(
-{
-rid
-}
+.
+.
+videoElems
+]
 )
-=
->
-rid
-=
-=
-"
-foo
-"
+;
+await
+checkVideoElements
+(
+senderElement
+videoElems
+encodings
 )
+;
+encodings
+[
+0
+]
 .
 scaleResolutionDownBy
 =
 1
 ;
 encodings
-.
-find
-(
-(
-{
-rid
-}
-)
-=
->
-rid
-=
-=
-"
-bar
-"
-)
+[
+1
+]
 .
 scaleResolutionDownBy
 =
 2
 ;
 encodings
-.
-find
-(
-(
-{
-rid
-}
-)
-=
->
-rid
-=
-=
-"
-baz
-"
-)
+[
+2
+]
 .
 scaleResolutionDownBy
 =
 3
 ;
+info
+(
+Changing
+encodings
+to
+{
+JSON
+.
+stringify
+(
+encodings
+)
+}
+)
+;
 await
+sender
+.
 setParameters
 (
-test
-emitter
+{
 encodings
+}
 )
 ;
 await
-checkResolutions
+waitForResizeEvents
 (
-test
-emitter
+videoElems
 )
 ;
-}
-async
-function
-PC_LOCAL_CHANGE_PARAMS_3
+await
+checkVideoElements
 (
-)
-{
+senderElement
+videoElems
 encodings
-.
-find
-(
-(
-{
-rid
-}
 )
-=
->
-rid
-=
-=
-"
-foo
-"
-)
+;
+encodings
+[
+0
+]
 .
 scaleResolutionDownBy
 =
 6
 ;
 encodings
-.
-find
-(
-(
-{
-rid
-}
-)
-=
->
-rid
-=
-=
-"
-bar
-"
-)
+[
+1
+]
 .
 scaleResolutionDownBy
 =
 5
 ;
 encodings
-.
-find
-(
-(
-{
-rid
-}
-)
-=
->
-rid
-=
-=
-"
-baz
-"
-)
+[
+2
+]
 .
 scaleResolutionDownBy
 =
 4
 ;
+info
+(
+Changing
+encodings
+to
+{
+JSON
+.
+stringify
+(
+encodings
+)
+}
+)
+;
 await
+sender
+.
 setParameters
 (
-test
-emitter
+{
 encodings
+}
 )
 ;
 await
-checkResolutions
+waitForResizeEvents
 (
-test
-emitter
+videoElems
 )
 ;
-}
-async
-function
-PC_LOCAL_CHANGE_PARAMS_4
+await
+checkVideoElements
 (
-)
-{
+senderElement
+videoElems
 encodings
-.
-find
-(
-(
-{
-rid
-}
 )
-=
->
-rid
-=
-=
-"
-foo
-"
-)
+;
+encodings
+[
+0
+]
 .
 scaleResolutionDownBy
 =
 4
 ;
 encodings
-.
-find
-(
-(
-{
-rid
-}
-)
-=
->
-rid
-=
-=
-"
-bar
-"
-)
+[
+1
+]
 .
 scaleResolutionDownBy
 =
 1
 ;
 encodings
-.
-find
-(
-(
-{
-rid
-}
-)
-=
->
-rid
-=
-=
-"
-baz
-"
-)
+[
+2
+]
 .
 scaleResolutionDownBy
 =
 2
 ;
+info
+(
+Changing
+encodings
+to
+{
+JSON
+.
+stringify
+(
+encodings
+)
+}
+)
+;
 await
+sender
+.
 setParameters
 (
-test
-emitter
+{
+encodings
+}
+)
+;
+await
+waitForResizeEvents
+(
+videoElems
+)
+;
+await
+checkVideoElements
+(
+senderElement
+videoElems
 encodings
 )
 ;
-await
-checkResolutions
-(
-test
 emitter
-)
-;
-}
-]
-)
-;
-await
-test
 .
-run
+stop
+(
+)
+;
+videoStream
+.
+getVideoTracks
+(
+)
+[
+0
+]
+.
+stop
+(
+)
+;
+offerer
+.
+close
+(
+)
+;
+answerer
+.
+close
 (
 )
 ;
