--- a/dom/media/webrtc/tests/mochitests/test_peerConnection_simulcastAnswer.html
+++ b/dom/media/webrtc/tests/mochitests/test_peerConnection_simulcastAnswer.html
@@ -61,6 +61,50 @@ js
 script
 >
 <
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+helpers_from_wpt
+/
+sdp
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+simulcast
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -112,122 +156,15 @@ true
 }
 )
 ;
-function
-addRIDExtension
-(
-pc
-extensionId
-)
-{
-const
-receivers
-=
-pc
-.
-_pc
-.
-getReceivers
-(
-)
-;
-is
-(
-receivers
-.
-length
-1
-"
-We
-have
-exactly
-one
-RTP
-receiver
-"
-)
-;
-const
-receiver
-=
-receivers
-[
-0
-]
-;
-SpecialPowers
-.
-wrap
-(
-receiver
-)
-.
-mozAddRIDExtension
-(
-extensionId
-)
-;
-}
-function
-selectRecvRID
-(
-pc
-rid
-)
-{
-const
-receivers
-=
-pc
-.
-_pc
-.
-getReceivers
-(
-)
-;
-is
-(
-receivers
-.
-length
-1
-"
-We
-have
-exactly
-one
-RTP
-receiver
-"
-)
-;
-const
-receiver
-=
-receivers
-[
-0
-]
-;
-SpecialPowers
-.
-wrap
-(
-receiver
-)
-.
-mozAddRIDFilter
-(
-rid
-)
-;
-}
 runNetworkTest
 (
+async
 (
 )
 =
 >
+{
+await
 pushPrefs
 (
 [
@@ -287,66 +224,171 @@ min_bitrate_estimate
 1000
 ]
 )
+;
+const
+offerer
+=
+new
+RTCPeerConnection
+(
+)
+;
+const
+answerer
+=
+new
+RTCPeerConnection
+(
+)
+;
+const
+add
+=
+(
+pc
+can
+failed
+)
+=
+>
+can
+&
+&
+pc
 .
-then
+addIceCandidate
 (
+can
+)
+.
+catch
 (
+failed
+)
+;
+offerer
+.
+onicecandidate
+=
+e
+=
+>
+add
+(
+answerer
+e
+.
+candidate
+generateErrorCallback
+(
+)
+)
+;
+answerer
+.
+onicecandidate
+=
+e
+=
+>
+add
+(
+offerer
+e
+.
+candidate
+generateErrorCallback
+(
+)
+)
+;
+const
+metadataToBeLoaded
+=
+[
+]
+;
+offerer
+.
+ontrack
+=
+(
+e
 )
 =
 >
 {
-let
-emitter
-helper
-;
-test
-=
-new
-PeerConnectionTest
+metadataToBeLoaded
+.
+push
 (
-{
-bundle
-:
-false
-}
+getPlaybackWithLoadedMetadata
+(
+e
+.
+track
+)
 )
 ;
-test
+}
+;
+/
+/
+Two
+recv
+transceivers
+one
+for
+each
+simulcast
+stream
+offerer
 .
-setMediaConstraints
+addTransceiver
 (
-[
-{
+'
 video
-:
-true
-}
-]
-[
+'
 {
-video
+direction
 :
-true
+'
+recvonly
+'
 }
-]
 )
 ;
-test
+offerer
 .
-chain
-.
-replace
+addTransceiver
 (
-"
-PC_REMOTE_GUM
-"
-[
-function
-PC_REMOTE_CANVAS_CAPTURESTREAM
-(
-test
-)
+'
+video
+'
 {
+direction
+:
+'
+recvonly
+'
+}
+)
+;
+/
+/
+One
+send
+transceiver
+that
+will
+be
+used
+to
+send
+both
+simulcast
+streams
+const
 emitter
 =
 new
@@ -354,24 +396,28 @@ VideoFrameEmitter
 (
 )
 ;
-helper
+const
+videoStream
 =
-new
-VideoStreamHelper
-(
-)
-;
-test
-.
-pcRemote
-.
-attachLocalStream
-(
 emitter
 .
 stream
 (
 )
+;
+answerer
+.
+addTrack
+(
+videoStream
+.
+getVideoTracks
+(
+)
+[
+0
+]
+videoStream
 )
 ;
 emitter
@@ -380,77 +426,174 @@ start
 (
 )
 ;
-}
-]
+const
+offer
+=
+await
+offerer
+.
+createOffer
+(
 )
 ;
-test
-.
-chain
-.
-insertAfter
-(
-'
-PC_REMOTE_GET_OFFER
-'
-[
-function
-PC_REMOTE_SET_RIDS
-(
-test
-)
-{
 const
-senders
+mungedOffer
 =
-test
-.
-pcRemote
-.
-_pc
-.
-getSenders
+midToRid
 (
+offer
+.
+sdp
+)
+;
+info
+(
+Transformed
+recv
+offer
+to
+simulcast
+:
+{
+offer
+.
+sdp
+}
+to
+{
+mungedOffer
+}
+)
+;
+await
+answerer
+.
+setRemoteDescription
+(
+{
+type
+:
+'
+offer
+'
+sdp
+:
+mungedOffer
+}
+)
+;
+await
+offerer
+.
+setLocalDescription
+(
+offer
+)
+;
+const
+rids
+=
+offerer
+.
+getTransceivers
+(
+)
+.
+map
+(
+t
+=
+>
+t
+.
+mid
 )
 ;
 is
 (
-senders
+rids
 .
 length
-1
-"
-We
+2
+'
+Should
 have
-exactly
-one
-RTP
-sender
-"
+2
+mids
+in
+offer
+'
+)
+;
+ok
+(
+rids
+[
+0
+]
+!
+=
+'
+'
+'
+First
+mid
+should
+be
+non
+-
+empty
+'
+)
+;
+ok
+(
+rids
+[
+1
+]
+!
+=
+'
+'
+'
+Second
+mid
+should
+be
+non
+-
+empty
+'
+)
+;
+info
+(
+rids
+:
+{
+JSON
+.
+stringify
+(
+rids
+)
+}
 )
 ;
 const
 sender
 =
-senders
+answerer
+.
+getSenders
+(
+)
 [
 0
 ]
 ;
-ok
-(
-sender
-.
-track
-"
-Sender
-has
-a
-track
-"
-)
-;
-return
+await
 sender
 .
 setParameters
@@ -462,9 +605,10 @@ encodings
 {
 rid
 :
-"
-foo
-"
+rids
+[
+0
+]
 maxBitrate
 :
 40000
@@ -472,9 +616,10 @@ maxBitrate
 {
 rid
 :
-"
-bar
-"
+rids
+[
+1
+]
 maxBitrate
 :
 40000
@@ -486,767 +631,133 @@ scaleResolutionDownBy
 }
 )
 ;
-}
-function
-PC_LOCAL_ADD_RIDS_TO_OFFER
-(
-test
-)
-{
-/
-/
-Create
-a
-dummy
-offer
-and
-use
-it
-to
-set
-simulcast
-stuff
-on
-the
-/
-/
-offer
-we
-will
-actually
-be
-using
-.
-return
-test
-.
-createOffer
-(
-test
-.
-pcRemote
-)
-.
-then
-(
-offer
+const
+answer
 =
->
-{
-test
+await
+answerer
 .
-_local_offer
-.
-sdp
-=
-sdputils
-.
-transferSimulcastProperties
+createAnswer
 (
-offer
-.
-sdp
-test
-.
-_local_offer
+)
+;
+const
+mungedAnswer
+=
+ridToMid
+(
+answer
 .
 sdp
 )
 ;
 info
 (
-"
-Offer
-with
-RIDs
-:
-"
-+
-JSON
-.
-stringify
-(
-test
-.
-_local_offer
-)
-)
-;
-ok
-(
-test
-.
-_local_offer
-.
-sdp
-.
-match
-(
-/
-a
-=
+Transformed
+send
 simulcast
-:
-/
-)
-"
-Modified
-offer
-has
-simulcast
-"
-)
-;
-ok
-(
-test
-.
-_local_offer
-.
-sdp
-.
-match
-(
-/
-a
-=
-rid
-:
-foo
-/
-)
-"
-Modified
-offer
-has
-rid
-foo
-"
-)
-;
-ok
-(
-test
-.
-_local_offer
-.
-sdp
-.
-match
-(
-/
-a
-=
-rid
-:
-bar
-/
-)
-"
-Modified
-offer
-has
-rid
-bar
-"
-)
-;
-ok
-(
-test
-.
-_local_offer
-.
-sdp
-.
-match
-(
-/
-urn
-:
-ietf
-:
-params
-:
-rtp
--
-hdrext
-:
-sdes
-:
-rtp
--
-stream
--
-id
-/
-)
-"
-Modified
-offer
-has
-RID
-"
-)
-;
-}
-)
-;
-}
-]
-)
-;
-test
-.
-chain
-.
-insertAfter
-(
-'
-PC_LOCAL_GET_ANSWER
-'
-[
-function
-PC_LOCAL_REMOVE_SIMULCAST_ATTRS_FROM_ANSWER
-(
-test
-)
-{
-test
-.
-_remote_answer
-.
-sdp
-=
-sdputils
-.
-removeSimulcastProperties
-(
-test
-.
-_remote_answer
-.
-sdp
-)
-;
-}
-]
-)
-;
-/
-/
-do
-this
-after
-set
-remote
-description
-so
-the
-MediaPipeline
-/
-/
-has
-been
-created
-.
-test
-.
-chain
-.
-insertAfter
-(
-'
-PC_LOCAL_SET_REMOTE_DESCRIPTION
-'
-[
-function
-PC_LOCAL_SET_RTP_FIRST_RID
-(
-test
-)
-{
-const
-extmap_id
-=
-test
-.
-_local_offer
-.
-sdp
-.
-match
-(
-"
-a
-=
-extmap
-:
-(
-[
-0
--
-9
-+
-]
-)
-/
-recvonly
-urn
-:
-ietf
-:
-params
-:
-rtp
--
-hdrext
-:
-sdes
-:
-rtp
--
-stream
--
-id
-"
-)
-;
-ok
-(
-extmap_id
-"
-Local
-offer
-has
-extmap
-id
-for
-simulcast
-:
-"
-+
-extmap_id
-[
-1
-]
-)
-;
-/
-/
-Cause
-pcLocal
+answer
 to
-filter
-out
-everything
-but
-RID
-"
-bar
-"
-only
-/
-/
-allowing
-one
-of
-the
-simulcast
-streams
-through
-.
-addRIDExtension
-(
-test
-.
-pcLocal
-extmap_id
-[
-1
-]
-)
-;
-selectRecvRID
-(
-test
-.
-pcLocal
-"
-bar
-"
-)
-;
-}
-]
-)
-;
-test
-.
-chain
-.
-append
-(
-[
-async
-function
-PC_LOCAL_WAIT_FOR_FRAMES
-(
-)
+multiple
+m
+-
+sections
+:
 {
-const
-vremote
-=
-test
+answer
 .
-pcLocal
-.
-remoteMediaElements
-[
-0
-]
-;
-ok
-(
-vremote
-"
-Should
-have
-remote
-video
-element
-for
-pcLocal
-"
-)
-;
-emitter
-.
-start
-(
+sdp
+}
+to
+{
+mungedAnswer
+}
 )
 ;
 await
-helper
+offerer
 .
-checkVideoPlaying
+setRemoteDescription
 (
-vremote
-)
-;
-emitter
-.
-stop
-(
-)
-;
-}
-function
-PC_LOCAL_CHECK_SIZE_1
-(
-)
 {
-const
-vlocal
-=
-test
-.
-pcRemote
-.
-localMediaElements
-[
-0
-]
-;
-const
-vremote
-=
-test
-.
-pcLocal
-.
-remoteMediaElements
-[
-0
-]
-;
-ok
-(
-vlocal
-"
-Should
-have
-local
-video
-element
-for
-pcRemote
-"
-)
-;
-ok
-(
-vremote
-"
-Should
-have
-remote
-video
-element
-for
-pcLocal
-"
-)
-;
-is
-(
-vlocal
-.
-videoWidth
-50
-"
-correct
-source
-width
-"
-)
-;
-is
-(
-vlocal
-.
-videoHeight
-50
-"
-correct
-source
-height
-"
-)
-;
-is
-(
-vremote
-.
-videoWidth
-24
-"
-sink
-is
-1
-/
-2
-width
-of
-source
-modulo
-our
-cropping
-algorithm
-"
-)
-;
-is
-(
-vremote
-.
-videoHeight
-24
-"
-sink
-is
-1
-/
-2
-height
-of
-source
-modulo
-our
-cropping
-algorithm
-"
-)
-;
+type
+:
+'
+answer
+'
+sdp
+:
+mungedAnswer
 }
-function
-PC_LOCAL_SET_RTP_SECOND_RID
-(
-test
-)
-{
-/
-/
-Now
-cause
-pcLocal
-to
-filter
-out
-everything
-but
-RID
-"
-foo
-"
-only
-/
-/
-allowing
-the
-other
-simulcast
-stream
-through
-.
-selectRecvRID
-(
-test
-.
-pcLocal
-"
-foo
-"
-)
-;
-}
-function
-PC_LOCAL_WAIT_FOR_SECOND_MEDIA_FLOW
-(
-test
-)
-{
-return
-test
-.
-pcLocal
-.
-waitForMediaFlow
-(
-)
-;
-}
-async
-function
-PC_LOCAL_WAIT_FOR_FRAMES_2
-(
-)
-{
-const
-vremote
-=
-test
-.
-pcLocal
-.
-remoteMediaElements
-[
-0
-]
-;
-ok
-(
-vremote
-"
-Should
-have
-remote
-video
-element
-for
-pcLocal
-"
-)
-;
-emitter
-.
-start
-(
 )
 ;
 await
+answerer
+.
+setLocalDescription
+(
+answer
+)
+;
+is
+(
+metadataToBeLoaded
+.
+length
+2
+'
+Offerer
+should
+have
+gotten
+2
+ontrack
+events
+'
+)
+;
+info
+(
+'
+Waiting
+for
+2
+loadedmetadata
+events
+'
+)
+;
+const
+videoElems
+=
+await
+Promise
+.
+all
+(
+metadataToBeLoaded
+)
+;
+const
 helper
-.
-checkVideoPlaying
-(
-vremote
-)
-;
-emitter
-.
-stop
+=
+new
+VideoStreamHelper
 (
 )
 ;
-}
-/
-/
-For
-some
-reason
-even
-though
-we
+info
+(
 '
-re
-getting
-a
-24x24
-stream
-sometimes
-/
-/
-the
-resolution
-isn
-'
-t
-updated
-on
-the
-video
-element
-on
-the
+Waiting
+for
 first
-frame
-.
-async
-function
-PC_LOCAL_WAIT_FOR_FRAMES_3
-(
-)
-{
-const
-vremote
-=
-test
-.
-pcLocal
-.
-remoteMediaElements
-[
-0
-]
-;
-ok
-(
-vremote
-"
-Should
-have
-remote
 video
 element
-for
-pcLocal
-"
-)
-;
-emitter
-.
+to
 start
-(
+playing
+'
 )
 ;
 await
@@ -1254,7 +765,131 @@ helper
 .
 checkVideoPlaying
 (
-vremote
+videoElems
+[
+0
+]
+)
+;
+info
+(
+'
+Waiting
+for
+second
+video
+element
+to
+start
+playing
+'
+)
+;
+await
+helper
+.
+checkVideoPlaying
+(
+videoElems
+[
+1
+]
+)
+;
+is
+(
+videoElems
+[
+0
+]
+.
+videoWidth
+48
+"
+sink
+is
+same
+width
+as
+source
+modulo
+our
+cropping
+algorithm
+"
+)
+;
+is
+(
+videoElems
+[
+0
+]
+.
+videoHeight
+48
+"
+sink
+is
+same
+height
+as
+source
+modulo
+our
+cropping
+algorithm
+"
+)
+;
+is
+(
+videoElems
+[
+1
+]
+.
+videoWidth
+24
+"
+sink
+is
+1
+/
+2
+width
+of
+source
+modulo
+our
+cropping
+algorithm
+"
+)
+;
+is
+(
+videoElems
+[
+1
+]
+.
+videoHeight
+24
+"
+sink
+is
+1
+/
+2
+height
+of
+source
+modulo
+our
+cropping
+algorithm
+"
 )
 ;
 emitter
@@ -1263,161 +898,32 @@ stop
 (
 )
 ;
-}
-function
-PC_LOCAL_CHECK_SIZE_2
+videoStream
+.
+getVideoTracks
 (
 )
-{
-const
-vlocal
-=
-test
-.
-pcRemote
-.
-localMediaElements
 [
 0
 ]
-;
-const
-vremote
-=
-test
 .
-pcLocal
-.
-remoteMediaElements
-[
-0
-]
-;
-ok
+stop
 (
-vlocal
-"
-Should
-have
-local
-video
-element
-for
-pcRemote
-"
 )
 ;
-ok
-(
-vremote
-"
-Should
-have
-remote
-video
-element
-for
-pcLocal
-"
-)
-;
-is
-(
-vlocal
+offerer
 .
-videoWidth
-50
-"
-correct
-source
-width
-"
-)
-;
-is
+close
 (
-vlocal
-.
-videoHeight
-50
-"
-correct
-source
-height
-"
 )
 ;
-is
-(
-vremote
+answerer
 .
-videoWidth
-48
-"
-sink
-is
-same
-width
-as
-source
-modulo
-our
-cropping
-algorithm
-"
-)
-;
-is
-(
-vremote
-.
-videoHeight
-48
-"
-sink
-is
-same
-height
-as
-source
-modulo
-our
-cropping
-algorithm
-"
-)
-;
-}
-]
-)
-;
-return
-test
-.
-run
+close
 (
 )
 ;
 }
-)
-.
-catch
-(
-e
-=
->
-ok
-(
-false
-"
-unexpected
-failure
-:
-"
-+
-e
-)
-)
 )
 ;
 <
