--- a/dom/media/webrtc/tests/mochitests/test_peerConnection_simulcastOffer.html
+++ b/dom/media/webrtc/tests/mochitests/test_peerConnection_simulcastOffer.html
@@ -82,6 +82,50 @@ js
 script
 >
 <
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+helpers_from_wpt
+/
+sdp
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+simulcast
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -133,116 +177,6 @@ true
 }
 )
 ;
-function
-addRIDExtension
-(
-pc
-extensionId
-)
-{
-const
-receivers
-=
-pc
-.
-_pc
-.
-getReceivers
-(
-)
-;
-is
-(
-receivers
-.
-length
-1
-"
-We
-have
-exactly
-one
-RTP
-receiver
-"
-)
-;
-const
-receiver
-=
-receivers
-[
-0
-]
-;
-SpecialPowers
-.
-wrap
-(
-receiver
-)
-.
-mozAddRIDExtension
-(
-extensionId
-)
-;
-}
-function
-selectRecvRID
-(
-pc
-rid
-)
-{
-const
-receivers
-=
-pc
-.
-_pc
-.
-getReceivers
-(
-)
-;
-is
-(
-receivers
-.
-length
-1
-"
-We
-have
-exactly
-one
-RTP
-receiver
-"
-)
-;
-const
-receiver
-=
-receivers
-[
-0
-]
-;
-SpecialPowers
-.
-wrap
-(
-receiver
-)
-.
-mozAddRIDFilter
-(
-rid
-)
-;
-}
 runNetworkTest
 (
 async
@@ -312,54 +246,128 @@ min_bitrate_estimate
 ]
 )
 ;
-let
-emitter
-helper
-;
 const
-test
+offerer
 =
 new
-PeerConnectionTest
+RTCPeerConnection
 (
-{
-bundle
-:
-false
-}
 )
 ;
-test
-.
-setMediaConstraints
+const
+answerer
+=
+new
+RTCPeerConnection
 (
-[
-{
-video
-:
-true
-}
-]
-[
-]
 )
 ;
-test
-.
-chain
-.
-replace
+const
+add
+=
 (
-"
-PC_LOCAL_GUM
-"
-[
-function
-PC_LOCAL_CANVAS_CAPTURESTREAM
-(
-test
+pc
+can
+failed
 )
+=
+>
+can
+&
+&
+pc
+.
+addIceCandidate
+(
+can
+)
+.
+catch
+(
+failed
+)
+;
+offerer
+.
+onicecandidate
+=
+e
+=
+>
+add
+(
+answerer
+e
+.
+candidate
+generateErrorCallback
+(
+)
+)
+;
+answerer
+.
+onicecandidate
+=
+e
+=
+>
+add
+(
+offerer
+e
+.
+candidate
+generateErrorCallback
+(
+)
+)
+;
+const
+metadataToBeLoaded
+=
+[
+]
+;
+answerer
+.
+ontrack
+=
+(
+e
+)
+=
+>
 {
+metadataToBeLoaded
+.
+push
+(
+getPlaybackWithLoadedMetadata
+(
+e
+.
+track
+)
+)
+;
+}
+;
+/
+/
+One
+send
+transceiver
+that
+will
+be
+used
+to
+send
+both
+simulcast
+streams
+const
 emitter
 =
 new
@@ -367,24 +375,28 @@ VideoFrameEmitter
 (
 )
 ;
-helper
+const
+videoStream
 =
-new
-VideoStreamHelper
-(
-)
-;
-test
-.
-pcLocal
-.
-attachLocalStream
-(
 emitter
 .
 stream
 (
 )
+;
+offerer
+.
+addTrack
+(
+videoStream
+.
+getVideoTracks
+(
+)
+[
+0
+]
+videoStream
 )
 ;
 emitter
@@ -393,77 +405,18 @@ start
 (
 )
 ;
-}
-]
-)
-;
-test
-.
-chain
-.
-insertBefore
-(
-'
-PC_LOCAL_CREATE_OFFER
-'
-[
-function
-PC_LOCAL_SET_RIDS
-(
-test
-)
-{
 const
-senders
+sender
 =
-test
-.
-pcLocal
-.
-_pc
+offerer
 .
 getSenders
 (
 )
-;
-is
-(
-senders
-.
-length
-1
-"
-We
-have
-exactly
-one
-RTP
-sender
-"
-)
-;
-const
-sender
-=
-senders
 [
 0
 ]
 ;
-ok
-(
-sender
-.
-track
-"
-Sender
-has
-a
-track
-"
-)
-;
-return
 sender
 .
 setParameters
@@ -475,9 +428,9 @@ encodings
 {
 rid
 :
-"
-foo
-"
+'
+0
+'
 maxBitrate
 :
 40000
@@ -485,9 +438,9 @@ maxBitrate
 {
 rid
 :
-"
-bar
-"
+'
+1
+'
 maxBitrate
 :
 40000
@@ -499,943 +452,288 @@ scaleResolutionDownBy
 }
 )
 ;
-}
-]
+const
+offer
+=
+await
+offerer
+.
+createOffer
+(
 )
 ;
-test
-.
-chain
-.
-insertAfter
-(
-'
-PC_LOCAL_GET_ANSWER
-'
-[
-function
-PC_LOCAL_ADD_RIDS_TO_ANSWER
-(
-test
-)
-{
-test
-.
-_remote_answer
-.
-sdp
+const
+mungedOffer
 =
-sdputils
-.
-transferSimulcastProperties
+ridToMid
 (
-test
-.
-originalOffer
-.
-sdp
-test
-.
-_remote_answer
+offer
 .
 sdp
 )
 ;
 info
 (
-"
-Answer
-with
-RIDs
+Transformed
+send
+simulcast
+offer
+to
+multiple
+m
+-
+sections
 :
-"
-+
+{
+offer
+.
+sdp
+}
+to
+{
+mungedOffer
+}
+)
+;
+await
+answerer
+.
+setRemoteDescription
+(
+{
+type
+:
+'
+offer
+'
+sdp
+:
+mungedOffer
+}
+)
+;
+await
+offerer
+.
+setLocalDescription
+(
+offer
+)
+;
+const
+rids
+=
+answerer
+.
+getTransceivers
+(
+)
+.
+map
+(
+t
+=
+>
+t
+.
+mid
+)
+;
+is
+(
+rids
+.
+length
+2
+'
+Should
+have
+2
+mids
+in
+offer
+'
+)
+;
+ok
+(
+rids
+[
+0
+]
+!
+=
+'
+'
+'
+First
+mid
+should
+be
+non
+-
+empty
+'
+)
+;
+ok
+(
+rids
+[
+1
+]
+!
+=
+'
+'
+'
+Second
+mid
+should
+be
+non
+-
+empty
+'
+)
+;
+info
+(
+rids
+:
+{
 JSON
 .
 stringify
 (
-test
-.
-_remote_answer
+rids
 )
-)
-;
-ok
-(
-test
-.
-_remote_answer
-.
-sdp
-.
-match
-(
-/
-a
-=
-simulcast
-:
-/
-)
-"
-Modified
-answer
-has
-simulcast
-"
-)
-;
-ok
-(
-test
-.
-_remote_answer
-.
-sdp
-.
-match
-(
-/
-a
-=
-rid
-:
-foo
-/
-)
-"
-Modified
-answer
-has
-rid
-foo
-"
-)
-;
-ok
-(
-test
-.
-_remote_answer
-.
-sdp
-.
-match
-(
-/
-a
-=
-rid
-:
-bar
-/
-)
-"
-Modified
-answer
-has
-rid
-bar
-"
-)
-;
-ok
-(
-test
-.
-_remote_answer
-.
-sdp
-.
-match
-(
-/
-urn
-:
-ietf
-:
-params
-:
-rtp
--
-hdrext
-:
-sdes
-:
-rtp
--
-stream
--
-id
-/
-)
-"
-Modified
-answer
-has
-RID
-"
-)
-;
 }
-]
 )
 ;
-/
-/
-For
-storing
-the
-rid
-extension
-so
-it
-can
-be
-checked
-in
-the
-RTP
-let
-ridExtensionId
-=
-0
-;
-/
-/
-do
-this
-after
-set
-local
-description
-so
-the
-MediaPipeline
-/
-/
-has
-been
-created
-.
-test
-.
-chain
-.
-insertAfter
-(
-'
-PC_REMOTE_SET_LOCAL_DESCRIPTION
-'
-[
-function
-PC_REMOTE_SET_RTP_FIRST_RID
-(
-test
-)
-{
 const
-extmap_id
+answer
 =
-test
+await
+answerer
 .
-originalOffer
+createAnswer
+(
+)
+;
+const
+mungedAnswer
+=
+midToRid
+(
+answer
 .
 sdp
-.
-match
-(
-"
-a
-=
-extmap
-:
-(
-[
-0
--
-9
-+
-]
-)
-/
-sendonly
-urn
-:
-ietf
-:
-params
-:
-rtp
--
-hdrext
-:
-sdes
-:
-rtp
--
-stream
--
-id
-"
 )
 ;
-ok
+info
 (
-extmap_id
-"
-Original
-offer
-has
-extmap
-id
-for
-simulcast
-:
-"
-+
-extmap_id
-[
-1
-]
-)
-;
-ridExtensionId
-=
-extmap_id
-[
-1
-]
-;
-/
-/
-Cause
-pcRemote
+Transformed
+recv
+answer
 to
-filter
-out
-everything
-but
-RID
-"
-foo
-"
-only
-/
-/
-allowing
-one
-of
-the
 simulcast
-streams
-through
+:
+{
+answer
 .
-addRIDExtension
-(
-test
-.
-pcRemote
-extmap_id
-[
-1
-]
-)
-;
-selectRecvRID
-(
-test
-.
-pcRemote
-"
-foo
-"
-)
-;
+sdp
 }
-]
-)
-;
-let
-getRtpPacket
-=
-(
-pc
-)
-=
->
+to
 {
-pc
-.
-mozEnablePacketDump
-(
-0
-"
-rtp
-"
-false
-)
-;
-return
-new
-Promise
-(
-(
-res
-rej
-)
-=
->
-pc
-.
-mozSetPacketCallback
-(
-(
-.
-.
-.
-args
-)
-=
->
-{
-res
-(
-[
-.
-.
-.
-args
-]
-)
-;
-pc
-.
-mozSetPacketCallback
-(
-(
-)
-=
->
-{
+mungedAnswer
 }
 )
 ;
-pc
+await
+offerer
 .
-mozDisablePacketDump
+setRemoteDescription
 (
-0
-"
-rtp
-"
-false
-)
-;
-}
-)
-)
-;
-}
-test
-.
-chain
-.
-insertBefore
-(
-'
-PC_REMOTE_WAIT_FOR_MEDIA_FLOW
-'
-[
-async
-function
-PC_REMOTE_CHECK_RID_IN_RTP
-(
-)
 {
-let
-pc
-=
-SpecialPowers
-.
-wrap
-(
-test
-.
-pcRemote
-.
-_pc
-)
-;
-let
-[
-level
 type
-sending
-data
-]
+:
+'
+answer
+'
+sdp
+:
+mungedAnswer
+}
+)
+;
+await
+answerer
+.
+setLocalDescription
+(
+answer
+)
+;
+is
+(
+metadataToBeLoaded
+.
+length
+2
+'
+Offerer
+should
+have
+gotten
+2
+ontrack
+events
+'
+)
+;
+info
+(
+'
+Waiting
+for
+2
+loadedmetadata
+events
+'
+)
+;
+const
+videoElems
 =
 await
-getRtpPacket
+Promise
+.
+all
 (
-pc
+metadataToBeLoaded
 )
 ;
-let
-extensions
+const
+helper
 =
-ParseRtpPacket
-(
-data
-)
-.
-header
-.
-extensions
-;
-ok
-(
-ridExtensionId
-"
-RID
-extension
-ID
-has
-been
-extracted
-from
-SDP
-"
-)
-;
-let
-ridExt
-=
-extensions
-.
-find
-(
-e
-=
->
-e
-.
-id
-=
-=
-ridExtensionId
-)
-;
-ok
-(
-ridExt
-"
-RID
-is
-present
-in
-RTP
-.
-"
-)
-;
-is
-(
 new
-TextDecoder
+VideoStreamHelper
 (
-'
-utf
--
-8
-'
-)
-.
-decode
-(
-ridExt
-.
-data
-)
-"
-foo
-"
-"
-RID
-is
-'
-foo
-'
-.
-"
 )
 ;
-}
-]
-)
-;
-test
-.
-chain
-.
-append
+info
 (
-[
-async
-function
-PC_REMOTE_WAIT_FOR_FRAMES
-(
-)
-{
-const
-vremote
-=
-test
-.
-pcRemote
-.
-remoteMediaElements
-[
-0
-]
-;
-ok
-(
-vremote
-"
-Should
-have
-remote
-video
-element
+'
+Waiting
 for
-pcRemote
-"
-)
-;
-emitter
-.
-start
-(
-)
-;
-await
-helper
-.
-checkVideoPlaying
-(
-vremote
-)
-;
-emitter
-.
-stop
-(
-)
-;
-}
-function
-PC_REMOTE_CHECK_SIZE_1
-(
-)
-{
-const
-vlocal
-=
-test
-.
-pcLocal
-.
-localMediaElements
-[
-0
-]
-;
-const
-vremote
-=
-test
-.
-pcRemote
-.
-remoteMediaElements
-[
-0
-]
-;
-ok
-(
-vlocal
-"
-Should
-have
-local
-video
-element
-for
-pcLocal
-"
-)
-;
-ok
-(
-vremote
-"
-Should
-have
-remote
-video
-element
-for
-pcRemote
-"
-)
-;
-is
-(
-vlocal
-.
-videoWidth
-50
-"
-correct
-source
-width
-"
-)
-;
-is
-(
-vlocal
-.
-videoHeight
-50
-"
-correct
-source
-height
-"
-)
-;
-is
-(
-vremote
-.
-videoWidth
-48
-"
-sink
-is
-same
-width
-as
-source
-modulo
-our
-cropping
-algorithm
-"
-)
-;
-is
-(
-vremote
-.
-videoHeight
-48
-"
-sink
-is
-same
-height
-as
-source
-modulo
-our
-cropping
-algorithm
-"
-)
-;
-}
-function
-PC_REMOTE_SET_RTP_SECOND_RID
-(
-test
-)
-{
-/
-/
-Now
-cause
-pcRemote
-to
-filter
-out
-everything
-but
-RID
-"
-bar
-"
-only
-/
-/
-allowing
-the
-other
-simulcast
-stream
-through
-.
-selectRecvRID
-(
-test
-.
-pcRemote
-"
-bar
-"
-)
-;
-}
-function
-PC_REMOTE_WAIT_FOR_SECOND_MEDIA_FLOW
-(
-test
-)
-{
-return
-test
-.
-pcRemote
-.
-waitForMediaFlow
-(
-)
-;
-}
-async
-function
-PC_REMOTE_WAIT_FOR_FRAMES_2
-(
-)
-{
-const
-vremote
-=
-test
-.
-pcRemote
-.
-remoteMediaElements
-[
-0
-]
-;
-ok
-(
-vremote
-"
-Should
-have
-remote
-video
-element
-for
-pcRemote
-"
-)
-;
-emitter
-.
-start
-(
-)
-;
-await
-helper
-.
-checkVideoPlaying
-(
-vremote
-)
-;
-emitter
-.
-stop
-(
-)
-;
-}
-/
-/
-For
-some
-reason
-even
-though
-we
-'
-re
-getting
-a
-25x25
-stream
-sometimes
-/
-/
-the
-resolution
-isn
-'
-t
-updated
-on
-the
-video
-element
-on
-the
 first
-frame
-.
-async
-function
-PC_REMOTE_WAIT_FOR_FRAMES_3
-(
-)
-{
-const
-vremote
-=
-test
-.
-pcRemote
-.
-remoteMediaElements
-[
-0
-]
-;
-ok
-(
-vremote
-"
-Should
-have
-remote
 video
 element
-for
-pcRemote
-"
-)
-;
-emitter
-.
+to
 start
-(
+playing
+'
 )
 ;
 await
@@ -1443,7 +741,131 @@ helper
 .
 checkVideoPlaying
 (
-vremote
+videoElems
+[
+0
+]
+)
+;
+info
+(
+'
+Waiting
+for
+second
+video
+element
+to
+start
+playing
+'
+)
+;
+await
+helper
+.
+checkVideoPlaying
+(
+videoElems
+[
+1
+]
+)
+;
+is
+(
+videoElems
+[
+0
+]
+.
+videoWidth
+48
+"
+sink
+is
+same
+width
+as
+source
+modulo
+our
+cropping
+algorithm
+"
+)
+;
+is
+(
+videoElems
+[
+0
+]
+.
+videoHeight
+48
+"
+sink
+is
+same
+height
+as
+source
+modulo
+our
+cropping
+algorithm
+"
+)
+;
+is
+(
+videoElems
+[
+1
+]
+.
+videoWidth
+24
+"
+sink
+is
+1
+/
+2
+width
+of
+source
+modulo
+our
+cropping
+algorithm
+"
+)
+;
+is
+(
+videoElems
+[
+1
+]
+.
+videoHeight
+24
+"
+sink
+is
+1
+/
+2
+height
+of
+source
+modulo
+our
+cropping
+algorithm
+"
 )
 ;
 emitter
@@ -1452,142 +874,28 @@ stop
 (
 )
 ;
-}
-function
-PC_REMOTE_CHECK_SIZE_2
+videoStream
+.
+getVideoTracks
 (
 )
-{
-const
-vlocal
-=
-test
-.
-pcLocal
-.
-localMediaElements
 [
 0
 ]
-;
-const
-vremote
-=
-test
 .
-pcRemote
-.
-remoteMediaElements
-[
-0
-]
-;
-ok
+stop
 (
-vlocal
-"
-Should
-have
-local
-video
-element
-for
-pcLocal
-"
 )
 ;
-ok
-(
-vremote
-"
-Should
-have
-remote
-video
-element
-for
-pcRemote
-"
-)
-;
-is
-(
-vlocal
+offerer
 .
-videoWidth
-50
-"
-correct
-source
-width
-"
-)
-;
-is
+close
 (
-vlocal
-.
-videoHeight
-50
-"
-correct
-source
-height
-"
 )
 ;
-is
-(
-vremote
+answerer
 .
-videoWidth
-24
-"
-sink
-is
-1
-/
-2
-width
-of
-source
-modulo
-our
-cropping
-algorithm
-"
-)
-;
-is
-(
-vremote
-.
-videoHeight
-24
-"
-sink
-is
-1
-/
-2
-height
-of
-source
-modulo
-our
-cropping
-algorithm
-"
-)
-;
-}
-]
-)
-;
-await
-test
-.
-run
+close
 (
 )
 ;
