Bug 1724361 - Reduce the side effect of iframe test in observe.html. r=hiro
test6() has side effects if we got fail from iframe. We have to move
resolvePromise() before the assert_equals() because if this assert fails, it
interrupts this async test. In this case, no one resolve the promise.
So we have to resolve the promise before any asserts.

Besides, move the event listener above the iframe src setup.

Differential Revision: https://phabricator.services.mozilla.com/D122537

UltraBlame original commit: 8b5050f0ea95742d37f9cbbbdfd7766d09a57613

--- a/testing/web-platform/tests/resize-observer/observe.html
+++ b/testing/web-platform/tests/resize-observer/observe.html
@@ -1027,20 +1027,6 @@ iframe
 ;
 iframe
 .
-src
-=
-"
-.
-/
-resources
-/
-iframe
-.
-html
-"
-;
-iframe
-.
 width
 =
 "
@@ -1065,38 +1051,6 @@ display
 block
 "
 ;
-return
-new
-Promise
-(
-function
-(
-resolve
-reject
-)
-{
-iframe
-.
-onload
-=
-(
-)
-=
->
-resolve
-(
-)
-;
-}
-)
-.
-then
-(
-(
-)
-=
->
-{
 let
 resolvePromise
 ;
@@ -1221,6 +1175,10 @@ requestAnimationFrame
 =
 >
 {
+resolvePromise
+(
+)
+;
 test
 .
 step
@@ -1246,10 +1204,6 @@ done
 (
 )
 ;
-resolvePromise
-(
-)
-;
 }
 )
 ;
@@ -1263,8 +1217,97 @@ break
 false
 )
 ;
+iframe
+.
+src
+=
+"
+.
+/
+resources
+/
+iframe
+.
+html
+"
+;
+return
+new
+Promise
+(
+function
+(
+resolve
+reject
+)
+{
+iframe
+.
+onload
+=
+(
+)
+=
+>
+resolve
+(
+)
+;
+iframe
+.
+onerror
+=
+(
+)
+=
+>
+reject
+(
+)
+;
+}
+)
+.
+then
+(
+(
+)
+=
+>
+{
 return
 promise
+;
+}
+)
+.
+catch
+(
+error
+=
+>
+{
+test
+.
+step
+(
+(
+)
+=
+>
+{
+assert_unreached
+(
+"
+loading
+iframe
+is
+error
+"
+)
+;
+}
+)
 ;
 }
 )
