--- a/testing/web-platform/tests/resize-observer/observe.html
+++ b/testing/web-platform/tests/resize-observer/observe.html
@@ -824,6 +824,64 @@ image
 png
 "
 ;
+return
+img
+.
+decode
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
+return
+new
+Promise
+(
+resolve
+=
+>
+{
+requestAnimationFrame
+(
+(
+)
+=
+>
+{
+document
+.
+body
+.
+appendChild
+(
+img
+)
+;
+resolve
+(
+)
+;
+}
+)
+;
+}
+)
+;
+}
+)
+.
+then
+(
+(
+)
+=
+>
+{
 let
 helper
 =
@@ -915,82 +973,6 @@ width
 )
 ;
 return
-img
-.
-decode
-(
-)
-.
-then
-(
-(
-)
-=
->
-{
-return
-new
-Promise
-(
-resolve
-=
->
-{
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-document
-.
-body
-.
-appendChild
-(
-img
-)
-;
-resolve
-(
-)
-;
-}
-)
-;
-}
-)
-;
-}
-)
-.
-catch
-(
-error
-=
->
-{
-assert_unreached
-(
-"
-decode
-image
-failed
-"
-)
-;
-}
-)
-.
-then
-(
-(
-)
-=
->
-{
-return
 helper
 .
 start
@@ -1004,6 +986,46 @@ img
 remove
 (
 )
+)
+;
+}
+(
+)
+=
+>
+{
+/
+/
+dummy
+test
+for
+dumping
+the
+error
+message
+.
+test
+(
+_
+=
+>
+{
+assert_unreached
+(
+"
+decode
+image
+failed
+"
+)
+;
+}
+"
+test5
+:
+observe
+img
+"
 )
 ;
 }
