--- a/dom/events/test/test_coalesce_touchmove.html
+++ b/dom/events/test/test_coalesce_touchmove.html
@@ -77,37 +77,88 @@ waitForExplicitFinish
 (
 )
 ;
-function
-finish_ipc
-(
-)
-{
-window
-.
-open
-(
-"
-file_coalesce_touchmove_browserchild
-.
-html
-"
-)
-;
-}
-function
-start
-(
-)
-{
-window
-.
-open
-(
+let
+tests
+=
+[
 "
 file_coalesce_touchmove_ipc
 .
 html
 "
+"
+file_coalesce_touchmove_browserchild
+.
+html
+"
+"
+file_coalesce_touchmove_browserchild2
+.
+html
+"
+]
+;
+function
+finish
+(
+)
+{
+info
+(
+"
+finish
+"
+)
+;
+if
+(
+tests
+.
+length
+)
+{
+SimpleTest
+.
+executeSoon
+(
+run
+)
+;
+return
+;
+}
+SimpleTest
+.
+finish
+(
+)
+;
+}
+function
+run
+(
+)
+{
+info
+(
+run
+{
+tests
+[
+0
+]
+}
+)
+;
+window
+.
+open
+(
+tests
+.
+shift
+(
+)
 )
 ;
 }
@@ -124,7 +175,7 @@ body
 onload
 =
 "
-start
+run
 (
 )
 ;
