Bug 1711912 - Test we can access special protection query key system when preffed on. r=alwu
Differential Revision: https://phabricator.services.mozilla.com/D122769

UltraBlame original commit: a3c678c2c608afddeec401b0a975d2dcdc90828d

--- a/dom/media/test/test_eme_special_key_system.html
+++ b/dom/media/test/test_eme_special_key_system.html
@@ -101,30 +101,8 @@ text
 javascript
 "
 >
-/
-/
-Tests
-that
-org
-.
-mozilla
-.
-clearkey_with_protection_query
-cannot
-be
-accessed
-from
-JS
-if
-not
-preffed
-on
-.
-add_task
-(
-async
 function
-protectionQueryKeySystemShouldBeHidden
+requestProtectionQueryKeySystemAccess
 (
 )
 {
@@ -175,6 +153,43 @@ mozilla
 clearkey_with_protection_query
 "
 ;
+return
+navigator
+.
+requestMediaKeySystemAccess
+(
+kClearKeyWithProtectionQuery
+kKeySystemOptions
+)
+;
+}
+/
+/
+Tests
+that
+org
+.
+mozilla
+.
+clearkey_with_protection_query
+cannot
+be
+accessed
+from
+JS
+if
+not
+preffed
+on
+.
+add_task
+(
+async
+function
+protectionQueryKeySystemShouldBeHidden
+(
+)
+{
 try
 {
 /
@@ -190,12 +205,8 @@ not
 enabled
 .
 await
-navigator
-.
-requestMediaKeySystemAccess
+requestProtectionQueryKeySystemAccess
 (
-kClearKeyWithProtectionQuery
-kKeySystemOptions
 )
 ;
 ok
@@ -270,6 +281,129 @@ key
 system
 is
 unsupported
+"
+)
+;
+}
+}
+)
+;
+/
+/
+Tests
+that
+org
+.
+mozilla
+.
+clearkey_with_protection_query
+can
+be
+accessed
+from
+JS
+if
+preffed
+on
+.
+add_task
+(
+async
+function
+protectionQueryKeySystemShouldBeExposed
+(
+)
+{
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+media
+.
+clearkey
+.
+test
+-
+key
+-
+systems
+.
+enabled
+"
+true
+]
+]
+}
+)
+;
+try
+{
+/
+/
+Should
+not
+throw
+since
+special
+key
+systems
+are
+enabled
+.
+let
+access
+=
+await
+requestProtectionQueryKeySystemAccess
+(
+)
+;
+ok
+(
+access
+"
+Should
+get
+access
+to
+protection
+query
+key
+system
+when
+preffed
+on
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+ok
+(
+false
+"
+Test
+should
+not
+have
+thrown
+and
+key
+system
+should
+be
+available
 "
 )
 ;
