Bug 1725916: Ensure an Accessible is created if aria-description is set. r=eeejay
Differential Revision: https://phabricator.services.mozilla.com/D122850

UltraBlame original commit: 40d991086c1f966807c340f0a83b6cb75f6d2056

--- a/accessible/tests/mochitest/tree/test_aria_globals.html
+++ b/accessible/tests/mochitest/tree/test_aria_globals.html
@@ -164,6 +164,9 @@ controls
 describedby
 "
 "
+description
+"
+"
 disabled
 "
 "
@@ -706,6 +709,25 @@ span
 id
 =
 "
+description
+"
+aria
+-
+description
+=
+"
+hi
+"
+>
+<
+/
+span
+>
+<
+span
+id
+=
+"
 disabled
 "
 aria
@@ -1007,6 +1029,25 @@ describedby
 =
 "
 pawn
+"
+>
+<
+/
+td
+>
+<
+td
+id
+=
+"
+td_description
+"
+aria
+-
+description
+=
+"
+hi
 "
 >
 <
