Bug 1725540 - Rewrite helper_touch_action_regions.html to make it work with some async utility functions. r=tnikkel
The test function in helper_touch_action_regions.html needs to run as a
generator function, which means it doesn't work with async/await manners, so
once after we make some utility functions as async, it won't work as expected.
To avoid it, getting the scroller position in the screen coords part needs to
be split out from the generator since the part will be async in the next commit,
and nsIDOMWindowUtils.sendNativeTouchPoint needs to be used directly instead of
using synthesizeNativeTouch since synthesizeNativeTouch will also be async.

Differential Revision: https://phabricator.services.mozilla.com/D122558

UltraBlame original commit: 65111930856dff4005c96c235c43058f7724dea9

--- a/gfx/layers/apz/test/mochitest/helper_touch_action_regions.html
+++ b/gfx/layers/apz/test/mochitest/helper_touch_action_regions.html
@@ -1082,6 +1082,44 @@ PRIORITY_INPUT_HIGH
 )
 ;
 }
+var
+scrollerPosition
+;
+function
+getScrollerPosition
+(
+)
+{
+const
+scroller
+=
+document
+.
+getElementById
+(
+"
+scroller
+"
+)
+;
+scrollerPosition
+=
+coordinatesRelativeToScreen
+(
+{
+offsetX
+:
+0
+offsetY
+:
+0
+target
+:
+scroller
+}
+)
+;
+}
 function
 *
 test
@@ -2001,18 +2039,37 @@ scroller
 "
 )
 ;
-synthesizeNativeTouch
+var
+utils
+=
+utilsForTarget
 (
-scroller
-10
-110
+window
+)
+;
+utils
+.
+sendNativeTouchPoint
+(
+0
 SpecialPowers
 .
 DOMWindowUtils
 .
 TOUCH_CONTACT
+scrollerPosition
+.
+x
++
+10
+scrollerPosition
+.
+y
++
+110
+1
+90
 null
-0
 )
 ;
 RunAfterProcessedQueuedInputEvents
@@ -2036,10 +2093,25 @@ i
 +
 )
 {
-synthesizeNativeTouch
+utils
+.
+sendNativeTouchPoint
 (
-scroller
+0
+SpecialPowers
+.
+DOMWindowUtils
+.
+TOUCH_CONTACT
+scrollerPosition
+.
+x
++
 10
+scrollerPosition
+.
+y
++
 110
 -
 (
@@ -2047,13 +2119,9 @@ i
 *
 10
 )
-SpecialPowers
-.
-DOMWindowUtils
-.
-TOUCH_CONTACT
+1
+90
 null
-0
 )
 ;
 RunAfterProcessedQueuedInputEvents
@@ -2062,18 +2130,29 @@ testDriver
 )
 ;
 }
-synthesizeNativeTouch
+utils
+.
+sendNativeTouchPoint
 (
-scroller
-10
-10
+0
 SpecialPowers
 .
 DOMWindowUtils
 .
 TOUCH_REMOVE
+scrollerPosition
+.
+x
++
+10
+scrollerPosition
+.
+y
++
+10
+1
+90
 null
-0
 )
 ;
 RunAfterProcessedQueuedInputEvents
@@ -2786,6 +2865,11 @@ else
 {
 waitUntilApzStable
 (
+)
+.
+then
+(
+getScrollerPosition
 )
 .
 then
