Bug 1725540 - Get top level window's resolution via SpecialPowers.spawn. r=tnikkel
Thus a bunch of relevant functions need to be async.

Differential Revision: https://phabricator.services.mozilla.com/D122559

UltraBlame original commit: 7e795e95ddda3f9b8fb6fe4cff9077834f8b898e

--- a/gfx/layers/apz/test/mochitest/helper_basic_onetouchpinch.html
+++ b/gfx/layers/apz/test/mochitest/helper_basic_onetouchpinch.html
@@ -278,6 +278,7 @@ mozvisualscroll
 var
 initial_resolution
 =
+await
 getResolution
 (
 )
@@ -469,6 +470,7 @@ promiseApzFlushedRepaints
 let
 final_resolution
 =
+await
 getResolution
 (
 )
