--- a/gfx/layers/apz/test/mochitest/helper_basic_zoom.html
+++ b/gfx/layers/apz/test/mochitest/helper_basic_zoom.html
@@ -274,6 +274,7 @@ mozvisualscroll
 var
 initial_resolution
 =
+await
 getResolution
 (
 )
@@ -328,6 +329,7 @@ promiseApzFlushedRepaints
 let
 final_resolution
 =
+await
 getResolution
 (
 )
