--- a/gfx/layers/apz/test/mochitest/helper_bug1162771.html
+++ b/gfx/layers/apz/test/mochitest/helper_bug1162771.html
@@ -431,6 +431,7 @@ handleTouchEnd
 var
 pt
 =
+await
 coordinatesRelativeToScreen
 (
 {
@@ -523,6 +524,7 @@ handleTouchEnd
 ;
 pt
 =
+await
 coordinatesRelativeToScreen
 (
 {
