--- a/gfx/layers/apz/test/mochitest/helper_checkerboard_zoomoverflowhidden.html
+++ b/gfx/layers/apz/test/mochitest/helper_checkerboard_zoomoverflowhidden.html
@@ -164,6 +164,7 @@ window
 var
 initial_resolution
 =
+await
 getResolution
 (
 )
@@ -480,6 +481,7 @@ promiseApzFlushedRepaints
 let
 final_resolution
 =
+await
 getResolution
 (
 )
