--- a/gfx/layers/apz/test/mochitest/helper_disallow_doubletap_zoom_inside_oopif.html
+++ b/gfx/layers/apz/test/mochitest/helper_disallow_doubletap_zoom_inside_oopif.html
@@ -141,6 +141,7 @@ touchpad
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -275,6 +276,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
