--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_bug1702464.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_bug1702464.html
@@ -235,15 +235,21 @@ height
 )
 ;
 let
+resolution
+=
+await
+getResolution
+(
+)
+;
+let
 vvHeightAtUnitZoom
 =
 visualViewport
 .
 height
 *
-getResolution
-(
-)
+resolution
 ;
 /
 /
@@ -566,9 +572,9 @@ promiseApzFlushedRepaints
 (
 )
 ;
-var
 resolution
 =
+await
 getResolution
 (
 )
@@ -628,6 +634,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -683,6 +690,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
