--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_fixedpos.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_fixedpos.html
@@ -225,6 +225,7 @@ touchpad
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -299,6 +300,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -353,6 +355,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
