--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_fixedpos_overflow.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_fixedpos_overflow.html
@@ -230,6 +230,7 @@ touchpad
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -326,6 +327,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -380,6 +382,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
