--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_gencon.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_gencon.html
@@ -143,6 +143,7 @@ touchpad
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -236,6 +237,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -294,6 +296,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -392,6 +395,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -470,6 +474,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
