--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_horizontal_center.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_horizontal_center.html
@@ -158,6 +158,7 @@ touchpad
 var
 resolution
 =
+await
 getResolution
 (
 )
@@ -217,6 +218,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
