--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_hscrollable.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_hscrollable.html
@@ -204,6 +204,7 @@ touchpad
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -395,6 +396,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
