--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_hscrollable2.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_hscrollable2.html
@@ -153,6 +153,7 @@ touchpad
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -340,6 +341,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -547,6 +549,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
