--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_htmlelement.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_htmlelement.html
@@ -149,6 +149,7 @@ touchpad
 var
 resolution
 =
+await
 getResolution
 (
 )
@@ -213,6 +214,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -389,6 +391,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
