--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_large_overflow.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_large_overflow.html
@@ -150,6 +150,7 @@ touchpad
 var
 resolution
 =
+await
 getResolution
 (
 )
@@ -326,6 +327,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
