--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_nothing.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_nothing.html
@@ -132,6 +132,7 @@ touchpad
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -196,6 +197,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -257,6 +259,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
