--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_oopif.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_oopif.html
@@ -125,6 +125,7 @@ touchpad
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -184,6 +185,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -245,6 +247,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
