--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_scrolled_overflowhidden.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_scrolled_overflowhidden.html
@@ -155,6 +155,7 @@ touchpad
 var
 resolution
 =
+await
 getResolution
 (
 )
@@ -329,6 +330,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
