--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_shadowdom.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_shadowdom.html
@@ -189,6 +189,7 @@ attach
 var
 resolution
 =
+await
 getResolution
 (
 )
@@ -324,6 +325,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -395,6 +397,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
