--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_smooth.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_smooth.html
@@ -182,6 +182,7 @@ tolerance
 )
 ;
 }
+async
 function
 afterpaint
 (
@@ -713,6 +714,7 @@ deviceScale
 !
 within
 (
+await
 getResolution
 (
 )
@@ -739,6 +741,7 @@ lastResolution
 !
 within
 (
+await
 getResolution
 (
 )
@@ -756,6 +759,7 @@ zoomingIn
 lastResolution
 <
 =
+await
 getResolution
 (
 )
@@ -763,6 +767,7 @@ getResolution
 lastResolution
 >
 =
+await
 getResolution
 (
 )
@@ -833,6 +838,7 @@ scrollY
 }
 lastResolution
 =
+await
 getResolution
 (
 )
@@ -897,6 +903,7 @@ afterpaint
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -970,6 +977,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -1067,6 +1075,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
