--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_tablecell.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_tablecell.html
@@ -126,6 +126,7 @@ touchpad
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -196,6 +197,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -266,6 +268,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -335,6 +338,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
