--- a/gfx/layers/apz/test/mochitest/helper_onetouchpinch_nested.html
+++ b/gfx/layers/apz/test/mochitest/helper_onetouchpinch_nested.html
@@ -217,6 +217,7 @@ layerized
 var
 initial_resolution
 =
+await
 getResolution
 (
 )
@@ -388,6 +389,7 @@ promiseApzFlushedRepaints
 let
 final_resolution
 =
+await
 getResolution
 (
 )
