--- a/gfx/layers/apz/test/mochitest/helper_overflowhidden_zoom.html
+++ b/gfx/layers/apz/test/mochitest/helper_overflowhidden_zoom.html
@@ -199,6 +199,7 @@ test
 {
 is
 (
+await
 getResolution
 (
 )
@@ -339,6 +340,7 @@ offsetLeft
 ;
 is
 (
+await
 getResolution
 (
 )
@@ -453,6 +455,7 @@ promiseApzFlushedRepaints
 ;
 is
 (
+await
 getResolution
 (
 )
@@ -574,6 +577,7 @@ promiseApzFlushedRepaints
 ;
 is
 (
+await
 getResolution
 (
 )
@@ -684,6 +688,7 @@ promiseApzFlushedRepaints
 ;
 is
 (
+await
 getResolution
 (
 )
