--- a/gfx/layers/apz/test/mochitest/helper_zoom_keyboardscroll.html
+++ b/gfx/layers/apz/test/mochitest/helper_zoom_keyboardscroll.html
@@ -202,6 +202,7 @@ test
 {
 is
 (
+await
 getResolution
 (
 )
@@ -316,6 +317,7 @@ promiseApzFlushedRepaints
 ;
 is
 (
+await
 getResolution
 (
 )
@@ -420,6 +422,7 @@ promiseApzFlushedRepaints
 ;
 is
 (
+await
 getResolution
 (
 )
@@ -522,6 +525,7 @@ promiseApzFlushedRepaints
 ;
 is
 (
+await
 getResolution
 (
 )
@@ -632,6 +636,7 @@ promiseApzFlushedRepaints
 ;
 is
 (
+await
 getResolution
 (
 )
