--- a/gfx/layers/apz/test/mochitest/helper_zoom_oopif.html
+++ b/gfx/layers/apz/test/mochitest/helper_zoom_oopif.html
@@ -211,6 +211,7 @@ height
 let
 initial_resolution
 =
+await
 getResolution
 (
 )
@@ -281,6 +282,7 @@ promiseApzFlushedRepaints
 let
 final_resolution
 =
+await
 getResolution
 (
 )
