--- a/gfx/layers/apz/test/mochitest/helper_zoom_out_clamped_scrollpos.html
+++ b/gfx/layers/apz/test/mochitest/helper_zoom_out_clamped_scrollpos.html
@@ -207,6 +207,7 @@ Initial
 state
 is
 (
+await
 getResolution
 (
 )
@@ -258,6 +259,7 @@ visual
 viewport
 is
 (
+await
 getResolution
 (
 )
@@ -805,6 +807,7 @@ at
 resolution
 is
 (
+await
 getResolution
 (
 )
