--- a/gfx/layers/apz/test/mochitest/helper_zoom_out_with_mainthread_clamping.html
+++ b/gfx/layers/apz/test/mochitest/helper_zoom_out_with_mainthread_clamping.html
@@ -217,6 +217,7 @@ Initial
 state
 is
 (
+await
 getResolution
 (
 )
@@ -340,6 +341,7 @@ right
 place
 is
 (
+await
 getResolution
 (
 )
@@ -616,6 +618,7 @@ entry
 i
 ]
 =
+await
 coordinatesRelativeToScreen
 (
 {
@@ -875,6 +878,7 @@ at
 resolution
 isfuzzy
 (
+await
 getResolution
 (
 )
