--- a/gfx/layers/apz/test/mochitest/helper_zoom_prevented.html
+++ b/gfx/layers/apz/test/mochitest/helper_zoom_prevented.html
@@ -130,6 +130,7 @@ aTouchStartToCancel
 var
 initial_resolution
 =
+await
 getResolution
 (
 )
@@ -354,6 +355,7 @@ promiseApzFlushedRepaints
 let
 final_resolution
 =
+await
 getResolution
 (
 )
