--- a/gfx/layers/apz/test/mochitest/helper_zoom_with_touchpad.html
+++ b/gfx/layers/apz/test/mochitest/helper_zoom_with_touchpad.html
@@ -155,6 +155,7 @@ in
 var
 initial_resolution
 =
+await
 getResolution
 (
 )
@@ -209,6 +210,7 @@ promiseApzFlushedRepaints
 let
 final_resolution
 =
+await
 getResolution
 (
 )
@@ -284,6 +286,7 @@ promiseApzFlushedRepaints
 ;
 final_resolution
 =
+await
 getResolution
 (
 )
@@ -365,6 +368,7 @@ promiseApzFlushedRepaints
 ;
 final_resolution
 =
+await
 getResolution
 (
 )
@@ -608,6 +612,7 @@ false
 ;
 final_resolution
 =
+await
 getResolution
 (
 )
@@ -781,6 +786,7 @@ false
 ;
 final_resolution
 =
+await
 getResolution
 (
 )
