--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom.html
@@ -144,6 +144,7 @@ touchpad
 var
 resolution
 =
+await
 getResolution
 (
 )
@@ -203,6 +204,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -264,6 +266,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
