--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_img.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_img.html
@@ -122,6 +122,7 @@ touchpad
 var
 resolution
 =
+await
 getResolution
 (
 )
@@ -181,6 +182,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -242,6 +244,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
