--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_noscroll.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_noscroll.html
@@ -160,6 +160,7 @@ touchpad
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -252,6 +253,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -372,6 +374,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
