--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_small.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_small.html
@@ -124,6 +124,7 @@ touchpad
 var
 resolution
 =
+await
 getResolution
 (
 )
@@ -183,6 +184,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -244,6 +246,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
