--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_square.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_square.html
@@ -154,6 +154,7 @@ touchpad
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -236,6 +237,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -382,6 +384,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
