--- a/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_tallwide.html
+++ b/gfx/layers/apz/test/mochitest/helper_doubletap_zoom_tallwide.html
@@ -165,6 +165,7 @@ touchpad
 var
 resolution
 =
+await
 getResolution
 (
 )
@@ -228,6 +229,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
@@ -420,6 +422,7 @@ resolution
 ;
 resolution
 =
+await
 getResolution
 (
 )
