--- a/gfx/layers/apz/test/mochitest/helper_hittest_bug1715187.html
+++ b/gfx/layers/apz/test/mochitest/helper_hittest_bug1715187.html
@@ -114,6 +114,7 @@ test
 let
 initial_resolution
 =
+await
 getResolution
 (
 )
@@ -168,6 +169,7 @@ promiseApzFlushedRepaints
 let
 resolution
 =
+await
 getResolution
 (
 )
@@ -324,6 +326,7 @@ promiseApzFlushedRepaints
 ;
 resolution
 =
+await
 getResolution
 (
 )
